--- a/src/main/resources/.env/gpt.properties
+++ b/src/main/resources/.env/gpt.properties
@@ -1,3 +1,3 @@
 openai.model=gpt-3.5-turbo
 openai.api.url=https://api.openai.com/v1/chat/completions
-openai.api.key=your-gpt-api-key
+openai.api.key=your-gpt-api-key-update
