Update open multi app

--- a/src/main/resources/softwares.properties
+++ b/src/main/resources/softwares.properties
@@ -2,3 +2,5 @@ pts=C:\\Program Files\\Adobe\\Adobe Photoshop 2021\\Photoshop.exe
 figma=C:\\Users\\agond\\AppData\\Local\\FigmaBeta\\app-116.18.4\\Figma Beta.exe
 icon=C:\\Users\\agond\\AppData\\Local\\Programs\\nucleo\\Nucleo.exe
 font=C:\\Users\\agond\\AppData\\Local\\Programs\\FontBase\\FontBase.exe
+uiux=C:\\Users\\agond\\AppData\\Local\\FigmaBeta\\app-116.18.4\\Figma Beta.exe; C:\\Users\\agond\\AppData\\Local\\Programs\\nucleo\\Nucleo.exe; C:\\Users\\agond\\AppData\\Local\\Programs\\FontBase\\FontBase.exe
+learn=C:\\Program Files\\DAUM\\PotPlayer\\PotPlayerMini64.exe
